# youbot-arm-dk-control

./: CMakeLists.txt  package.xml
include/youbot-arm-dk-control/: velocity_controller.h  velocity_controller.h~
include/youbot_arm_jacobi_control/: trajectory_generator.h  velocity_controller.h
src/: TrajectoryGenerator.cpp  velocity_controller.cpp  velocity_controller.cpp~
